--- a/SBMGUI/controls/ConsoleControl.xaml
+++ b/SBMGUI/controls/ConsoleControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SBMGUI.ConsoleControl"
+﻿<local:TabContentBaseControl x:Class="SBMGUI.ConsoleControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -22,4 +22,6 @@
             </ItemsControl>
         </ScrollViewer>
     </Grid>
-</UserControl>
+    
+    
+</local:TabContentBaseControl>
